# pipeworks-namegen-core

./: .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/source/: conf.py  index.rst
src/pipeworks_namegen_core/: __init__.py  generator.py  renderer.py  sampler.py  version.py
tests/: test_name_generator.py  test_renderer.py  test_sampler.py  test_smoke.py
