[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeworks-namegen-core"
version = "0.1.3"
description = "Pipeworks Namegen Core"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GNU General Public License v3.0"}
authors = [{name = "Pipe-Works"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "black==26.1.0",
  "bandit[toml]>=1.7.0",
  "mypy>=1.10",
  "pre-commit>=3.5",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
docs = [
  "sphinx>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
mypy_path = ["src"]

[tool.bandit]
skips = ["B101"]
